# posh

./: AUTHORS  ChangeLog  Makefile  Makefile.am  README  THANKS  config.status
doc/: Makefile.am  ieee-1003.1-2013-sh-grammar.txt  posh.egg
include/: Makefile
src/: Makefile  Makefile.am
tests/: Makefile  Makefile.am
